--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_fonts: ^2.1.0
+  dio: ^4.0.4
+  provider: ^6.0.1
+  flutter_spinkit: ^5.1.0
+  cached_network_image: ^3.2.0
+  youtube_player_flutter: ^8.0.0
 
 dev_dependencies:
   flutter_test:
